--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
 </nav>
 
 <div class="row mt-2">
-    <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4 col-12 mt-1">
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12 mt-1">
         <ul class="list-group">
             <li class="list-group-item"><input type="search" class="form-control" placeholder="search category.."></li>
             <li class="list-group-item">An item</li>
@@ -18,16 +18,44 @@
 
     </div>
 
-    <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8 col-12 mt-1">
-        <div class="form-control">
-            <input type="search" class="form-control" placeholder="Serach product...">
+    <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12 mt-1">
+        <div class="form-group">
+            <input type="search" class="form-control" placeholder="Search product...">
         </div>
+        <div class="form-group mt-1">
+            <div class="row">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
+                    <div class="card">
+                        <div class="card-header posiiton-relative">
+                            <div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfFFXV4zCJybOFvocqAKKkko37SsPbl9F66Q&usqp=CAU"
+                                    class="card-img-top" style="width: 100%; object-fit: cover;">
+                            </div>
+                            <span class="text-light"
+                                style="background-color: black; position: absolute; right: 10px; top: 10px; font-size: 10px;">
+                                stok:15
+                            </span>
 
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
-                
+                        </div>
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Grundig Pc 2560 B1</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            <h5 class="text-danger"><del>12.650,00 ₺</del></h5>
+                            <h5 class="text-success">12.650,00 ₺</h5>
+                        </div>
+                        <div class="card-header">
+                            <button class="btn btn-dark w-100 d-flex justify-content-between align-items-center">
+                                <div style="gap: 10px;" class="d-flex">
+                                    <button class="btn btn-sm btn-light">-</button>
+                                    <input type="number" style="width: 30px; text-align: center;" value="5">
+                                    <button class="btn btn-sm btn-light">+</button>
+                                </div>
+                                <i class="fa-solid fa-cart-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
