--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,12 +4,10 @@
     left: 15px;
 }
 
-li {
+li{
     cursor: pointer;
     user-select: none;
 }
-
-
 
 li:hover{
     background-color: #f1f1f1;
@@ -20,3 +18,14 @@ li:hover{
     background-color: #0d6efd;
     color: white;
 }
+
+.card-img-top{
+    height: 130px;
+    object-fit: cover;
+    object-position: top;
+}
+
+/* .card{
+    height: 450px;
+    overflow-y:auto;
+} */
