--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,13 +36,13 @@
     <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12 mt-1">
 
         <div class="position-relative">
-            <input type="search" class="form-control" placeholder="search category.." style="padding-left: 35px;">
+            <input type="search" class="form-control" placeholder="search product.." [(ngModel)]="productSearch" style="padding-left: 35px;">
             <i class="fa-solid fa-magnifying-glass search"></i>
         </div>
 
         <div class="form-group mt-1">
             <div class="row">
-                @for(product of products; track product){
+                @for(product of products |product: selectedCategoryId:productSearch; track product){
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
                         <div class="card">
                             <div class="card-header position-relative">
@@ -56,7 +56,10 @@
     
                             </div>
                             <div class="card-body text-center">
-                                <h6 class="card-title">{{product.name}}</h6>
+                                <h6 class="card-title" title="{{product.name}}">{{
+                                    product.name.length >= 19 
+                                    ? product.name.substring(0,19) + '...' 
+                                    : product.name}}</h6>
                                 <span style="font-size: smaller; background-color: #f1f1f1; padding: 2px 8px;">{{product.category.name}}</span>
                                 <p style="font-size: small;">{{product.description}}</p>
                                 <h5 class="text-danger"><del>{{product.price}}</del></h5>
