--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,11 +9,7 @@
     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12 mt-1">
         <ul class="list-group">
             <li class="list-group-item ">
-                <div class="position-relative">
-                    <input type="search" class="form-control" placeholder="Search category.."
-                        style="padding-left: 35px;" [(ngModel)]="categorySearch">
-                    <i class="fa-solid fa-magnifying-glass search"></i>
-                </div>
+             <app-search (changeSearch)="categorySearch=$event" ></app-search>
             </li>
             @if (categorySearch === "") {
             <div class="list-group-item " (click)="selectCategory('')"
@@ -35,51 +31,60 @@
 
     <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12 mt-1">
 
-        <div class="position-relative">
-            <input type="search" class="form-control" placeholder="search product.." [(ngModel)]="productSearch" style="padding-left: 35px;">
-            <i class="fa-solid fa-magnifying-glass search"></i>
-        </div>
+     <app-search (changeSearch)="productSearch=$event"></app-search>
 
         <div class="form-group mt-1">
             <div class="row">
                 @for(product of products |product: selectedCategoryId:productSearch; track product){
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
-                        <div class="card">
-                            <div class="card-header position-relative">
-                                <div>
-                                    <img src="{{product.imageUrl}}"
-                                        class="card-img-top" style="width: 100%; object-fit: cover;">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
+                    <div class="card">
+                        <div class="card-header position-relative">
+                            <div>
+                                <img src="{{product.imageUrl}}" class="card-img-top"
+                                    style="width: 100%; object-fit: cover;">
+                            </div>
+                            <span class="text-light"
+                                style="background-color: rgb(220,53,69); color: white; position: absolute; right: 10px; bottom: 10px; font-size: 10px; padding: 2px; border-radius: 5px;">
+                                Stock: {{product.stock}}
+                            </span>
+
+                        </div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title" title="{{product.name}}">{{
+                                product.name.length >= 19
+                                ? product.name.substring(0,19) + '...'
+                                : product.name}}</h6>
+                            <span
+                                style="font-size: smaller; background-color: #f1f1f1; padding: 2px 8px;">{{product.category.name}}</span>
+                            <p style="font-size: small;">{{product.description}}</p>
+                            <h5 class="text-danger"><del>{{product.price |trCurrency:'£':true}}</del></h5>
+                            <h5 class="text-success">{{product.discountedPrice |trCurrency:'TL'}}</h5>
+                        </div>
+                        <div class="card-header">
+                            @if (product.stock>0) {
+                            <button class="btn btn-dark w-100 d-flex justify-content-between align-items-center">
+                                <div style="gap: 10px;" class="d-flex align-items-center">
+                                    <i class="fa-solid fa-minus ibtn"
+                                        (click)="decrementProductQuantity(product)"></i>
+                                    <input type="number" style="width: 30px; text-align: center; height: 25px;"
+                                        [(ngModel)]="product.quantity">
+                                    <i class="fa-solid fa-plus ibtn"
+                                        (click)=" incrementProductQuantity(product)"></i>
                                 </div>
-                                <span class="text-light" style="background-color: rgb(220,53,69); color: white; position: absolute; right: 10px; bottom: 10px; font-size: 10px; padding: 2px; border-radius: 5px;">
-                                    Stock: {{product.stock}}
-                                </span>
-    
-                            </div>
-                            <div class="card-body text-center">
-                                <h6 class="card-title" title="{{product.name}}">{{
-                                    product.name.length >= 19 
-                                    ? product.name.substring(0,19) + '...' 
-                                    : product.name}}</h6>
-                                <span style="font-size: smaller; background-color: #f1f1f1; padding: 2px 8px;">{{product.category.name}}</span>
-                                <p style="font-size: small;">{{product.description}}</p>
-                                <h5 class="text-danger"><del>{{product.price}}</del></h5>
-                                <h5 class="text-success">{{product.discountedPrice}}</h5>
-                            </div>
-                            <div class="card-header">
-                                <button class="btn btn-dark w-100 d-flex justify-content-between align-items-center">
-                                    <div style="gap: 10px;" class="d-flex">
-                                        <button class="btn btn-sm btn-light">-</button>
-                                        <input type="number" style="width: 30px; text-align: center;" value="5">
-                                        <button class="btn btn-sm btn-light">+</button>
-                                    </div>
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                </button>
-                            </div>
+                                <i (click)="addShopingCart(product)" class="fa-solid fa-cart-plus"></i>
+                            </button>
+                            }@else{
+                            <button class="btn btn-danger w-100 " disabled>
+                                Out of stock
+                            </button>
+                            }
                         </div>
                     </div>
+                </div>
 
                 }
             </div>
         </div>
     </div>
 </div>
+
