--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,8 +1,4 @@
-.search{
-    position: absolute;
-    top: 11px;
-    left: 15px;
-}
+
 
 li{
     cursor: pointer;
@@ -29,3 +25,9 @@ li:hover{
     height: 450px;
     overflow-y:auto;
 } */
+
+.ibtn:hover {
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 10px;
+}
