--- a/src/app/components/layouts/navbar/navbar.component.html
+++ b/src/app/components/layouts/navbar/navbar.component.html
@@ -14,10 +14,10 @@
           </li>
      
         </ul>
-       <button class="btn btn-outline-success position-relative">
+       <button class="btn btn-outline-success position-relative" routerLink="shopping-carts">
         <i class="fa-solid fa-cart-shopping"></i>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-          0
+          {{Cart.shoppingCarts.length}}
           <span class="visually-hidden">unread messages</span>
         </span>
        </button>
