--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,11 +5,86 @@
     </ol>
 </nav>
 
+@if(_product.products.length === 0){
+<div class="row mt-2">
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12 mt-1">
+        <ul class="list-group">
+            <li class="list-group-item placeholder-glow">
+                <input class="form-control placeholder" />
+            </li>
+            <li class="list-group-item placeholder-glow">
+                <span class="placeholder">Category Category</span>
+            </li>
+            <li class="list-group-item placeholder-glow">
+                <span class="placeholder">Category Category</span>
+            </li>
+            <li class="list-group-item placeholder-glow">
+                <span class="placeholder">Category Category</span>
+            </li>
+            <li class="list-group-item placeholder-glow">
+                <span class="placeholder">Category Category</span>
+            </li>
+            <div class="placeholder-glow">
+                <span class="placeholder" style="font-size: small;">
+                    We found 3 category
+                </span>
+            </div>
+        </ul>
+    </div>
+
+    <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12 mt-1">
+        <input class="form-control placeholder" />
+
+        <div class="form-group mt-1">
+            <div class="row">
+                @for(num of numbers; track num){
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
+                    <div class="card">
+                        <div class="card-header position-relative">
+                            <div class="placeholder-glow">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Empty.png"
+                                    class="card-img-top placeholder" style="width: 100%; object-fit: contain;">
+                            </div>
+                            <span class="text-light placeholder-glow"
+                                style="background-color: rgb(220,53,69); color: white; position: absolute; right: 10px; bottom: 10px; font-size: 10px; padding: 2px; border-radius: 5px;">
+                                <span class="placeholder">Stock: 100</span>
+                            </span>
+                        </div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title placeholder-glow">
+                                <span class="placeholder">Example Product Name</span>
+                            </h6>
+                            <span class="placeholder-glow"
+                                style="font-size: smaller; background-color: #f1f1f1; padding: 2px 8px;">
+                                <span class="placeholder">Example Category</span>
+                            </span>
+                            <p class="placeholder-glow" style="font-size: small;">
+                                <span class="placeholder">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.</span>
+                            </p>
+                            <div class="d-flex placeholder-glow">
+                                <span class="text-danger me-3 placeholder"><del>₺100.00,00</del></span>
+                                <span class="text-success placeholder">₺99.999,00</span>
+                            </div>
+                        </div>
+                        <div class="card-header placeholder-glow">
+                            <span class="alert alert-dark placeholder" style="width: 100%;">
+
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+}@else {
 <div class="row mt-2">
     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12 mt-1">
         <ul class="list-group">
             <li class="list-group-item ">
-             <app-search (changeSearch)="categorySearch=$event" ></app-search>
+                <app-search (changeSearch)="categorySearch=$event"></app-search>
             </li>
             @if (categorySearch === "") {
             <div class="list-group-item " (click)="selectCategory('')"
@@ -31,11 +106,11 @@
 
     <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12 mt-1">
 
-     <app-search (changeSearch)="productSearch=$event"></app-search>
+        <app-search (changeSearch)="productSearch=$event"></app-search>
 
         <div class="form-group mt-1">
             <div class="row">
-                @for(product of products |product: selectedCategoryId:productSearch; track product){
+                @for(product of _product.products|product: selectedCategoryId:productSearch; track product){
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mt-1">
                     <div class="card">
                         <div class="card-header position-relative">
@@ -64,12 +139,10 @@
                             @if (product.stock>0) {
                             <button class="btn btn-dark w-100 d-flex justify-content-between align-items-center">
                                 <div style="gap: 10px;" class="d-flex align-items-center">
-                                    <i class="fa-solid fa-minus ibtn"
-                                        (click)="decrementProductQuantity(product)"></i>
+                                    <i class="fa-solid fa-minus ibtn" (click)="decrementProductQuantity(product)"></i>
                                     <input type="number" style="width: 30px; text-align: center; height: 25px;"
                                         [(ngModel)]="product.quantity">
-                                    <i class="fa-solid fa-plus ibtn"
-                                        (click)=" incrementProductQuantity(product)"></i>
+                                    <i class="fa-solid fa-plus ibtn" (click)=" incrementProductQuantity(product)"></i>
                                 </div>
                                 <i (click)="addShopingCart(product)" class="fa-solid fa-cart-plus"></i>
                             </button>
@@ -87,4 +160,4 @@
         </div>
     </div>
 </div>
-
+}
