--- a/src/app/components/shopping-carts/shopping-carts.component.html
+++ b/src/app/components/shopping-carts/shopping-carts.component.html
@@ -6,6 +6,8 @@
     </ol>
 </nav>
 
+@if(cart.shoppingCarts.length > 0){
+
 <div class="row mt-2">
     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-12">
         <div class="card">
@@ -18,7 +20,7 @@
                         <tr>
                             <th>#</th>
                             <th>Image</th>
-                            <th>Name</th>                            
+                            <th>Name</th>
                             <th>Price</th>
                             <th>Quantity</th>
                             <th>Total</th>
@@ -26,32 +28,70 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @for(product of cart.shoppingCarts ; track product){
                         <tr>
-                            <td>1</td>
+                            <td>{{$index +1}}</td>
                             <td>
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfFFXV4zCJybOFvocqAKKkko37SsPbl9F66Q&usqp=CA" width="50">
+                                <img src="{{product.imageUrl}}" width="50" height="50" style="object-fit: contain;">
                             </td>
-                            <td>Grundig Pc 2560 B1</td>
-                            <td>11999</td>
-                            <td>5</td>
-                            <td>59995</td>
+                            <td>{{product.name}}</td>
+                            <td>{{product.discountedPrice |trCurrency}}</td>
+
+                            <!-- burdaki stok sepete ekleenen stok olacak -->
+                            <td>
+                                <div style="gap: 10px;" class="d-flex align-items-center">
+                                    <i (click)="decrement(product,$index)" class="fa-solid fa-minus ibtn"></i>
+                                    <input disabled type="number" style="width: 30px; text-align: center; height: 25px;"
+                                        [(ngModel)]="product.quantity">
+                                    <i (click)="increment(product)" class="fa-solid fa-plus ibtn"></i>
+                                </div>
+                            </td>
+                            <td>{{product.discountedPrice*product.quantity |trCurrency:'₺' }}</td>
                             <td>
                                 <button class="btn btn-sn btn-outline-danger">
-                                    <i class="fa-solid fa-trash"></i>
+                                    <i (click)="removeByIndex($index)" class="fa-solid fa-trash"></i>
                                 </button>
                             </td>
                         </tr>
+                        }
                     </tbody>
                 </table>
+
             </div>
         </div>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
         <div class="card">
             <div class="card-header">
-                <h2 class="alert alert-success text-center">
-                    ₺12.499,00
-                </h2>
+                <table class="table">
+                    <tr>
+                        <th>Total Amount</th>
+                        <td style="text-align: right;">{{ totalAmount | trCurrency:'₺'}}</td>
+                    </tr>
+                    @if (totalKDV1) {
+                    <tr>
+                        <th>Total KDV 1</th>
+                        <td style="text-align: right;">{{ totalKDV1 | trCurrency:'₺'}}</td>
+                    </tr>
+                    }
+                    @if (totalKDV10) {
+                    <tr>
+                        <th>Total KDV 10</th>
+                        <td style="text-align: right;">{{ totalKDV10 | trCurrency:'₺'}}</td>
+                    </tr>
+                    }
+                    @if (totalKDV20) {
+                    <tr>
+                        <th>Total KDV 20</th>
+                        <td style="text-align: right;">{{ totalKDV20 | trCurrency:'₺'}}</td>
+                    </tr>
+                    }
+
+                    <tr>
+                        <th>Total </th>
+                        <td style="text-align: right;">{{ total | trCurrency:'₺'}}</td>
+                    </tr>
+                </table>
             </div>
             <div class="card-body">
                 <form>
@@ -81,6 +121,9 @@
                     </div>
                 </form>
             </div>
-        </div>     
+        </div>
     </div>
 </div>
+}@else {
+<h4 class="alert alert-primary"> there is no item in shopping carts</h4>
+}
